# PEtracer-2025

./: .gitignore  README.md  environment.lock.yml  environment.yml  gurobi.env  plot.mplstyle  pyproject.toml
barcoded_tracing/: call_alleles.slurm  evaluate.py  plot.py  process_10x.ipynb
barcoded_tracing/data/: manifest.txt
barcoded_tracing/fastq/: manifest.txt
barcoded_tracing/results/: clone_fmi.csv  (+5 more)
barcoding/: cellranger.slurm  evaluate.py  plot.py  process.py  process_10x.ipynb
colony/: process_merfish.ipynb
colony_tracing/: plot.py
design_intBC/: 1-Generate_candidate_intBCs.ipynb  2-Select_intBCs_by_Nupack_outputs.ipynb  PETS_orthoSeq_targets.xlsx  README.md
design_probes/: README.md
figures/: f3.py  f4.py  f5.py  s1.py  s5.py  s6.py  s7.py  s8.py
insert_selection/: CRISPResso_samplesheet.txt  aggregate_crispresso.ipynb  crosshyb.py  plot.py
insert_validation/: CRISPResso_samplesheet.txt  plot.ipynb
invitro_heterogeneity/: call_alleles.slurm  cellranger.slurm  plot.py  process_10x.ipynb
kinetics/: Plotting_kinetics.ipynb  call_alleles.slurm  cellranger.slurm  estimate_rates.py  plot.py  process_4T1_10x.ipynb  process_B16F10_10x.ipynb
legends/: plot.py
lineage_tracer_simulation/: plot.py  simulate.py  test.ipynb  test.py
orthogonal_insert_validation/: CRISPResso_samplesheet.txt  crispresso.sh  plot.ipynb
orthogonalization/: CRISPResso_samplesheet.txt  plot.ipynb
peg_arrays/: count_alleles.py  crispresso.slurm  plot.py
petracer/: __init__.py  barcode.py  clones.py  config.py  legends.py  plotting.py  seq.py  tree.py  utils.py
preedited/: call_alleles.slurm  cellranger.slurm  plot.py  process_10x.ipynb  process_10x_invitro.ipynb  process_merfish.py  process_merfish_invitro.ipynb  process_merfish_invivo.ipynb  process_merfish_zombie.ipynb
preedited_validation/: dev.ipynb  plot.py  process_merfish.py
reference/: edit_codebook.csv  integration_codebook.csv
scripts/: CRISPResso_setup.R  alleles_from_bam.py  barcodes_from_bam.py  make_CRISPResso_summary.R  mapping_from_bam.py
simulation/: plot.py  simulate.py  simulate.slurm
src/: barcode_utils.py  config.py  img_utils.py  legends.py  seq_utils.py  tree_utils.py  ts_utils.py  utils.py
tumor_tracing/: M1_process_MERFISH.ipynb  M1_resolVI_training.ipynb  M1_segment_tumors.ipynb  M2_process_MERFISH.ipynb  M2_process_lineage.ipynb  M2_segment_tumors.ipynb  M3_process_MERFISH.ipynb  M3_process_lineage.ipynb  M3_resolVI_training.ipynb  M3_segment_tumors.ipynb  plot.py
(+176 files in other folders)
